--- a/CrudMVC/Views/Student/StudentList.cshtml
+++ b/CrudMVC/Views/Student/StudentList.cshtml
@@ -24,8 +24,8 @@
     <td>@item.Description</td>
 
     <td>
-        <a href="@Url.Action("Delete", new { item.ID })" ><i class="glyphicon glyphicon-pencil"></i></a>
-        <a href="#"><i class="glyphicon glyphicon-trash"></i></a>
+        <a href="" ><i class="glyphicon glyphicon-pencil"></i></a>
+        <a href="@Url.Action("Delete", new { item.ID })"><i class="glyphicon glyphicon-trash"></i></a>
     </td>
 
 </tr>
