--- a/CrudMVC/Views/Shared/_Layout.cshtml
+++ b/CrudMVC/Views/Shared/_Layout.cshtml
@@ -23,7 +23,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("StudentList", "StudentList", "Student")</li>
+                    <li>@Html.ActionLink("Employee Record", "Employee", "Employee")</li>
+                    
                 </ul>
             </div>
         </div>
