--- a/CrudMVC/Views/Employee/Employee.cshtml
+++ b/CrudMVC/Views/Employee/Employee.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CrudMVC.Models.employee>
+﻿@model List<CrudMVC.Models.employee>
 
 @{
     ViewBag.Title = "Index";
@@ -9,12 +9,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap.min.css" />
-    
-    
-    
-
 
     <style>
 
@@ -27,15 +22,16 @@
         .glyphicon {
             font-size: 20px;
             margin-left: 20px;
+        }
 
+        #emptable {
+            text-align: center;
         }
-        
-        #emptable{
-            text-align:center;
+
+        .glyphicon-trash {
+            color: red;
         }
-        .glyphicon-trash{
-            color:red;
-        }
+
         .hovering i::before {
             display: none;
         }
@@ -48,13 +44,13 @@
             margin-left: 10px;
             margin-bottom: 20px;
         }
-        .modal-title{
-           font-weight:bold;
-        }
 
+        .modal-title {
+            font-weight: bold;
+        }
     </style>
 
-    
+
 </head>
 
 <body>
@@ -71,69 +67,25 @@
     <div id="myModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
 
-            <!-- Modal content-->
+            Modal content
             <div class="modal-content">
-                
+
                 <div class="modal-header">
 
                     <h2 class="modal-title">Add Employee Record</h2>
                 </div>
-                @*<div class="modal-body">
 
-                    @using (Html.BeginForm("addemployee","employee",FormMethod.Post))
-                    {
-                       
-                    <div class="container">
+                <div class="modal-body">
+                    @Html.Partial("_CreateData", new CrudMVC.Models.employee());
 
-                        <div class="form-group">
-
-                            <label>name</label>
-                            @Html.TextBoxFor(x => x.FullName, new { @class = "form-control" })
-                            
-
-                        </div>
-                        <div class="form-group">
-
-                            <label>age</label>
-                            @Html.TextBoxFor(x => x.Age, new { @type="number", @onkeypress = "return this.value.length<=1", @class = "form-control" })
-
-                        </div>
-                        <div class="form-group">
-
-                            <label>hire date</label>
-                            @Html.TextBoxFor(x => x.StartDate, new {@type="date", @max = "9999-12-31", @class = "form-control" })
-
-                        </div>
-                        <div class="form-group">
-                            <label>salary</label>
-                            
-                            @Html.TextBoxFor(x => x.Salary, new { @type="number", @class = "form-control" })
-
-                        </div>
-                        <div class="form-group">
-                            <button type="submit" onclick="addemployee" class="btn btn-primary">Submit</button>
-                            <button type="reset" class="btn btn-primary">Reset</button>
-
-                        </div>
-
-                    </div>
-                    }
-
-
-                </div>*@
-
-            <div class="modal-body">
-                @Html.Partial("Create", new CrudMVC.Models.employee());
-            </div>
+                </div>
 
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
-
         </div>
     </div>
-
 
     <table id="emptable" class="table table-striped table-hover table-bordered" style="width:100%">
         <thead>
@@ -146,24 +98,22 @@
             </tr>
         </thead>
         <tbody>
-            
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>@item.FullName</td>
-                        <td>@item.Age</td>
-                        <td>@item.StartDate.Value.ToShortDateString()</td>
-                        <td>@item.Salary</td>
-                        <td>
 
-                            <a href="#"><i class="glyphicon glyphicon-pencil"></i></a>
-                            <a href="#"><i class="glyphicon glyphicon-trash"></i></a>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@item.FullName</td>
+                    <td>@item.Age</td>
+                    <td>@item.StartDate.Value.ToShortDateString()</td>
+                    <td>@item.Salary</td>
+                    <td>
 
-                        </td>
-                    </tr>
-                }
+                        <a href="#"><i class="glyphicon glyphicon-pencil"></i></a>
+                        <a href="#"><i class="glyphicon glyphicon-trash"></i></a>
 
-            @*@Html.Partial("_DataList",Model);*@
+                    </td>
+                </tr>
+            }
 
         </tbody>
 
@@ -183,13 +133,9 @@
             });
 
         </script>
-
-
     }
 
-
 </body>
-
 </html>
 
 
