--- a/CrudMVC/Views/Employee/Employee.cshtml
+++ b/CrudMVC/Views/Employee/Employee.cshtml
@@ -1,4 +1,6 @@
-﻿@model List<CrudMVC.Models.employee>
+﻿@using PagedList.Mvc
+@model PagedList.IPagedList<CrudMVC.Models.employee>
+
 
 @{
     ViewBag.Title = "Index";
@@ -10,6 +12,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-growl/1.0.0/jquery.bootstrap-growl.min.js"></script>
+
 
     <style>
 
@@ -19,9 +23,10 @@
             margin-top: 10px;
         }
 
-        .glyphicon {
+        .glyphicon1 {
             font-size: 20px;
             margin-left: 20px;
+            margin-right: 20px;
         }
 
         #emptable {
@@ -48,6 +53,17 @@
         .modal-title {
             font-weight: bold;
         }
+
+        .bar {
+            font-size: 20px;
+            color: #0275d8;
+        }
+
+        .alert {
+            width: 50%;
+            margin: 0 auto;
+        }
+        
     </style>
 
 
@@ -61,36 +77,39 @@
         </div>
     </div>
 
-    <button type="button" id="btnadd" data-target="#myModal" data-toggle="modal" class="btnAdd btn-primary py-4 btn-lg">+ Add Record</button>
+    <div class="container-fluid" style="margin-bottom:20px;">
 
-    <!-- Modal -->
-    <div id="myModal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
+        <div class="row">
+            @using (Html.BeginForm("Employee","Employee",FormMethod.Get))
+            {
+                <div class="form-horizontal">
+                    <div class="form-group">
+                        <div class="col-md-2">
 
-            Modal content
-            <div class="modal-content">
-
-                <div class="modal-header">
-
-                    <h2 class="modal-title">Add Employee Record</h2>
+                        </div>
+                        <div class="col-md-6">
+                            
+                            <input type="text" placeholder="Search By Name" name="searchString" class="form-control" style="max-width:100%;" />
+                        </div>
+                        <div class="col-md-2">
+                            <button class="btn btn-primary" type="submit"><span class="glyphicon glyphicon-search"></span> Search</button>
+                        </div>
+                    </div>
                 </div>
-
-                <div class="modal-body">
-                    @Html.Partial("_CreateData", new CrudMVC.Models.employee());
-
-                </div>
-
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-            </div>
+            }
         </div>
+
+
     </div>
+
+    <button type="button" id="btnadd" class="btnAdd btn-primary py-4 btn-lg">+ Add Record</button>
 
     <table id="emptable" class="table table-striped table-hover table-bordered" style="width:100%">
         <thead>
             <tr>
-                <th style="text-align:center;">Name</th>
+                <th>
+                    @Html.ActionLink("Name", "Employee", new { page = Model.PageNumber, sortOrder = ViewBag.NameSortParm })
+                </th>
                 <th style="text-align:center;">Age</th>
                 <th style="text-align:center;">Hire Date</th>
                 <th style="text-align:center;">Salary</th>
@@ -108,8 +127,10 @@
                     <td>@item.Salary</td>
                     <td>
 
-                        <a href="#"><i class="glyphicon glyphicon-pencil"></i></a>
-                        <a href="#"><i class="glyphicon glyphicon-trash"></i></a>
+                        <a href=""><i class="glyphicon glyphicon-pencil glyphicon1"></i></a>
+                        <span class="bar">|</span>
+                        <a href="@Url.Action("Delete","Employee",new { item.ID})"><i class="glyphicon glyphicon-trash glyphicon1"></i></a>
+
 
                     </td>
                 </tr>
@@ -118,7 +139,18 @@
         </tbody>
 
     </table>
-
+    <div id="container" style="margin-left: 20px">
+        <p></p>
+        <p></p>
+        <div>
+            Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber)
+            of @Model.PageCount
+        </div>
+        <div class="pagination" style="margin-left: 400px">
+            @Html.PagedListPager(Model, page => Url.Action("Employee", new { page }))
+        </div>
+    </div>
+    
     @section Scripts{
 
         <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
@@ -126,13 +158,7 @@
         <script src="~/Scripts/jquery.validate.js"></script>
         <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
 
-        <script>
 
-            $(document).ready(function () {
-                $('#emptable').DataTable();
-            });
-
-        </script>
     }
 
 </body>
