--- a/CrudMVC/Views/Shared/_UpdateData.cshtml
+++ b/CrudMVC/Views/Shared/_UpdateData.cshtml
@@ -1,14 +1,9 @@
 ﻿@model CrudMVC.Models.employee
 
-<style>
-    .error {
-        color: red;
-    }
-</style>
 
 <div class="modal-body">
 
-    @using (Html.BeginForm("AddEmployee", "Employee", FormMethod.Post))
+    @using (Html.BeginForm("Update", "Employee", FormMethod.Post))
     {
 
         <div class="container">
@@ -42,7 +37,8 @@
 
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-primary">Submit</button>
+
+                <button type="submit" class="btn btn-primary">Update</button>
                 <button type="reset" class="btn btn-primary">Reset</button>
 
             </div>
