--- a/CrudMVC/Views/Employee/Employee.cshtml
+++ b/CrudMVC/Views/Employee/Employee.cshtml
@@ -89,7 +89,7 @@
                         </div>
                         <div class="col-md-6">
                             
-                            <input type="text" placeholder="Search By Name" name="searchString" class="form-control" style="max-width:100%;" />
+                            <input type="text" id="searchString" placeholder="Search By Name" name="searchString" class="form-control" style="max-width:100%;" />
                         </div>
                         <div class="col-md-2">
                             <button class="btn btn-primary" type="submit"><span class="glyphicon glyphicon-search"></span> Search</button>
