--- a/CrudMVC/Views/Employee/Employee.cshtml
+++ b/CrudMVC/Views/Employee/Employee.cshtml
@@ -80,7 +80,7 @@
     <div class="container-fluid" style="margin-bottom:20px;">
 
         <div class="row">
-            @using (Html.BeginForm("Employee","Employee",FormMethod.Get))
+            @using (Html.BeginForm("Employee", "Employee", FormMethod.Get))
             {
                 <div class="form-horizontal">
                     <div class="form-group">
@@ -88,7 +88,7 @@
 
                         </div>
                         <div class="col-md-6">
-                            
+
                             <input type="text" id="searchString" placeholder="Search By Name" name="searchString" class="form-control" style="max-width:100%;" />
                         </div>
                         <div class="col-md-2">
@@ -102,8 +102,8 @@
 
     </div>
 
-    <button type="button" id="btnadd" class="btnAdd btn-primary py-4 btn-lg">+ Add Record</button>
-
+    <button type="button" onclick="window.location= '@Url.Action( "AddEmployee", "Employee")'" id="btnadd" class="btnAdd btn-primary py-4 btn-lg"><i class="glyphicon glyphicon-plus"></i> Add Record</button>
+    
     <table id="emptable" class="table table-striped table-hover table-bordered" style="width:100%">
         <thead>
             <tr>
@@ -150,7 +150,7 @@
             @Html.PagedListPager(Model, page => Url.Action("Employee", new { page }))
         </div>
     </div>
-    
+
     @section Scripts{
 
         <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
